@@ -6,7 +6,7 @@
 class S0MeterSerial: public AsyncSerial, public S0MeterBase
 {
 public:
-	S0MeterSerial(const int ID, const std::string& devname, const unsigned int baud_rate, const std::string& Settings);
+	S0MeterSerial(const int ID, const std::string& devname, const unsigned int baud_rate);
     ~S0MeterSerial();
 
 	bool WriteToHardware(const char *pdata, const unsigned char length);
