@@ -469,6 +469,7 @@
     <ClInclude Include="..\hardware\RFXBase.h" />
     <ClInclude Include="..\hardware\S0MeterBase.h" />
     <ClInclude Include="..\hardware\S0MeterSerial.h" />
+    <ClInclude Include="..\hardware\S0MeterTCP.h" />
     <ClInclude Include="..\hardware\SatelIntegra.h" />
     <ClInclude Include="..\hardware\SBFSpot.h" />
     <ClInclude Include="..\hardware\serial\serial.h" />
@@ -677,6 +678,7 @@
     <ClCompile Include="..\hardware\RFXBase.cpp" />
     <ClCompile Include="..\hardware\S0MeterBase.cpp" />
     <ClCompile Include="..\hardware\S0MeterSerial.cpp" />
+    <ClCompile Include="..\hardware\S0MeterTCP.cpp" />
     <ClCompile Include="..\hardware\SatelIntegra.cpp" />
     <ClCompile Include="..\hardware\SBFSpot.cpp" />
     <ClCompile Include="..\hardware\serial\impl\win.cpp" />
